some fixes for scrollbars

--- a/styles.scss
+++ b/styles.scss
@@ -36,6 +36,7 @@ body {
 	margin: 0;
 	padding: 0;
   background: #161212;
+  overflow: hidden;
 }
 
 
@@ -319,7 +320,7 @@ text {
       height: 100%;
       position: relative;
       text-align: center;
-      overflow: scroll;
+      overflow: hidden;
       
       &-book-title {
         font-family: var(--book-title);
